# obelisk-offlineqo

./: .gitignore  LICENSE  README.md  pyproject.toml  run.sh
etc/: obelisk.toml.tpl  tidb.toml.tpl
sql/ceb-3k/: ceb_missing.txt
sql/ceb-3k/5a/: 5a1012.sql  5a102.sql  (+87 more)
sql/tpcds/: 10.sql  12.sql  13.sql  15.sql  16.sql  17.sql  18.sql  19.sql  20.sql  21.sql  22.sql  25.sql  26.sql  27.sql  28.sql  29.sql  3.sql  32.sql  34.sql  35.sql  36.sql  37.sql  40.sql  41.sql  42.sql  43.sql  44.sql  45.sql  46.sql  48.sql  49.sql  50.sql  52.sql  53.sql  55.sql  6.sql  61.sql  62.sql  63.sql  65.sql  (+23 more)
sql/tpch/: q1.sql  q10.sql  q11.sql  q12.sql  q13.sql  q14.sql  q16.sql  q17.sql  q18.sql  q19.sql  q2.sql  q20.sql  q21.sql  q22.sql  q3.sql  q4.sql  q5.sql  q6.sql  q7.sql  q8.sql  q9.sql
src/: run.py
src/db/: __init__.py  cache_manager.py  db_connection.py  plan_repository.py  sql_executor.py  subplan.py
src/llm/: __init__.py  llm.py  llm_config.py  prompts.py  reasoner.py
src/optimization/: __init__.py  bo_tuner.py  database_service.py  evaluator.py  guider.py  optimization_pipeline.py  optimization_strategies.py  result_exporter.py
src/test/: batch_best_config_runtime.py  run_all_tests.py  test_best_config_runtime.py  test_cache_manager.py  test_config.py  test_context_retrieval.py  test_db_connection.py  test_knob_space.py  test_llm_config.py  test_optimization_pipeline.py  test_result_exporter.py  test_run_file_collection.py  test_sql_executor.py  test_subplan.py  test_vector_workflow.py
src/util/: __init__.py  config.py  constants.py  knob_space.py  logger.py
(+719 files in other folders)
