[project]
name = "obelisk-offlineqo"
version = "0.1.0"
description = "OBELISK: Offline Bayesian Optimization-informed Query Planning"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "botorch",
    "gpytorch",
    "langchain-core",
    "pymysql",
    "langchain_openai",
    "numpy<2",
    "openai",
    "pyDOE",
    "PyYAML",
    "torch>=2.9.0",
    "tqdm",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"llm.promptopt" = ["*.yaml"]
